synoptic saven effort

--- a/KriddieFolder/GAVI_moreGeomorph_2022-02-16.Rmd
+++ b/KriddieFolder/GAVI_moreGeomorph_2022-02-16.Rmd
@@ -26,43 +26,112 @@ library(data.table)
 make a another  data frame with rest of the geomorphdata - width, depth, and some notes relating to wetland/waterfall stuff
 
 Start by reading in most recent synoptic data
+
+```{r add function}
+##arrange df vars by position
+##'vars' must be a named vector, e.g. c("var.name"=1)
+arrange.vars <- function(data, vars){
+    ##stop if not a data.frame (but should work for matrices as well)
+    stopifnot(is.data.frame(data))
+
+    ##sort out inputs
+    data.nms <- names(data)
+    var.nr <- length(data.nms)
+    var.nms <- names(vars)
+    var.pos <- vars
+    ##sanity checks
+    stopifnot( !any(duplicated(var.nms)), 
+               !any(duplicated(var.pos)) )
+    stopifnot( is.character(var.nms), 
+               is.numeric(var.pos) )
+    stopifnot( all(var.nms %in% data.nms) )
+    stopifnot( all(var.pos > 0), 
+               all(var.pos <= var.nr) )
+
+    ##prepare output
+    out.vec <- character(var.nr)
+    out.vec[var.pos] <- var.nms
+    out.vec[-var.pos] <- data.nms[ !(data.nms %in% var.nms) ]
+    stopifnot( length(out.vec)==var.nr )
+
+    ##re-arrange vars by position
+    data <- data[ , out.vec]
+    return(data)
+}
+```
+
 ```{r read in data}
-#df_prediction <- read.csv(here::here("ProcessedData/ANTE_synoptic_2022-02-18.csv"))
-df_prediction <- read.csv(here::here("ProcessedData/ANTE_synoptic_2022-03-23.csv"))
-df_prediction$X <-NULL
+df_prediction <- read.csv(here::here("ProcessedData/GAVI_synoptic_2022-03-24.csv"))
+df_prediction$X <- NULL
 
 ggplot(data=df_prediction, aes(dist, ele_fit, color=log10(CO2_ppm_ave)),size=5) +
+  geom_point(size=5)
+
+ggplot(data=df_prediction, aes(lon_fit, lat_fit, color=log10(CO2_ppm_ave)),size=5) +
   geom_point(size=5)
 ```
 #read in x, w, d data frame
 
 ```{r x and w and d, echo=FALSE}
-XWD <- read.csv(here::here("/Geomorphology/Atenas/Antenas_Geomorph_2022-01-28.csv"))
+XWD <- read.csv(here::here("/Geomorphology/Gavilan/GAVImainstem_Geomorph_2022-01-28.csv"))
 
 XWD <- XWD[,c("lon","lat","x","d","w","ele","notes")]
 
 #oh what rotten luck. XWD data was collected downstream to upstream and df_prediction is opposite. Let use right this wrong
+#also the distances are all messed up because of the gavi wetland, so we will reverse order one at a time
 
 XWD <- XWD[order(XWD$x),]
 XWD$x_diff <- NA
 
-for(i in 1:nrow(XWD)) {       # for-loop over rows
+##first above GAVI
+XWD_up <- XWD%>%filter(x>570)
+for(i in 1:nrow(XWD_up)) {       # for-loop over rows
   if (i == 1) {
-    XWD$x_diff[i] <- 0
+    XWD_up$x_diff[i] <- 0
   } else {
-    XWD[i,"x_diff"] <-   XWD[i,"x"] - XWD[i-1,"x"]
+    XWD_up[i,"x_diff"] <-   XWD_up[i,"x"] - XWD_up[i-1,"x"]
+  }
+}
+XWD_up <- XWD_up[order(-XWD_up$x),]
+XWD_up$x_new <- NA
+for(i in 1:nrow(XWD_up)) {       # for-loop over rows
+  if (i == 1) {
+    XWD_up$x_new[i] <- 0
+  } else {
+    XWD_up[i,"x_new"] <-   XWD_up[i-1,"x_diff"] + XWD_up[i-1,"x_new"]
+  }
+}
+XWD_up$x_new <-XWD_up$x_new - 0.8
+XWD_up$x_new[which(XWD_up$x_new==-0.8)] <- 0
+
+##below GAVI
+XWD_down <- XWD%>%filter(x<570)
+for(i in 1:nrow(XWD_down)) {       # for-loop over rows
+  if (i == 1) {
+    XWD_down$x_diff[i] <- 0
+  } else {
+    XWD_down[i,"x_diff"] <-   XWD_down[i,"x"] - XWD_down[i-1,"x"]
+  }
+}
+XWD_down <- XWD_down[order(-XWD_down$x),]
+XWD_down$x_new <- NA
+for(i in 1:nrow(XWD_down)) {       # for-loop over rows
+  if (i == 1) {
+    XWD_down$x_new[i] <- 0
+  } else {
+    XWD_down[i,"x_new"] <-   XWD_down[i-1,"x_diff"] + XWD_down[i-1,"x_new"]
   }
 }
 
-XWD <- XWD[order(-XWD$x),]
-XWD$x_new <- NA
-for(i in 1:nrow(XWD)) {       # for-loop over rows
-  if (i == 1) {
-    XWD$x_new[i] <- 0
-  } else {
-    XWD[i,"x_new"] <-   XWD[i-1,"x_diff"] + XWD[i-1,"x_new"]
-  }
-}
+#now add on some distance to account for Gavi_up and the wetland in between
+
+#wetland is dist: 313.0514 to 507.6456
+#most downstream measurment of gavi_up is 245.0
+
+XWD_down$x_new <- XWD_down$x_new + (507.6456-313.0514+0.4058) + 245.0
+
+XWD <- rbind(XWD_up,XWD_down)
+
 #great. now get rid of the stuff you don't want
 XWD <- XWD[,c("lon","lat","x_new","d","w","ele","notes")]
 names(XWD)[names(XWD) == 'x_new'] <- 'x'
@@ -73,8 +142,12 @@ names(XWD)[names(XWD) == 'x_new'] <- 'x'
 now we snap XWD data to prediction
 
 ```{r snap XDW, echo=FALSE}
+df_prediction <- arrange.vars(df_prediction, c("lon_fit"=1))
+#seeing some problems around GAVI wetland. Distance don't match up. So we will restart distance 
 
 XWD_1 <- XWD %>%drop_na(lon)
+XWD_2 <- XWD
+XWD_2$x[which(XWD_2$x>1043)] <- XWD_2$x[which(XWD_2$x>1043)] - (1045 - 507.6455874)
 
 x <- SpatialPoints(XWD_1[,c(1:2)])
 y <- SpatialPoints(df_prediction[,c(1:2)]) 
