--- a/KriddieFolder/GAVI_Geomorphology_2022-02-16.Rmd
+++ b/KriddieFolder/GAVI_Geomorphology_2022-02-16.Rmd
@@ -328,7 +328,6 @@ now we have created a distance column that we can plot the elevation data agains
 
 ```{r plot dist v ele, echo = FALSE}
 
-df_prediction <- df_prediction#%>% filter(lat <= -.327)
 
 fig <- plot_ly(df_prediction, x = ~dist, y = ~ele, size = 1)
 fig
@@ -582,7 +581,7 @@ take the loess spline and make a data frame that interpolates these data points
 #save <- df_prediction
 
 df_prediction <- rbind(df_prediction_1, df_prediction_2)
-
+df_prediction$slope <- NULL
 
 ggplot(data=df_prediction%>%drop_na(Flux_ave), aes(dist, ele_fit, color=Date)) +
   geom_point()
@@ -590,74 +589,70 @@ ggplot(data=df_prediction%>%drop_na(Flux_ave), aes(dist, ele_fit, color=Date)) +
 ggplot(data=df_prediction, aes(dist, ele_fit, col="CO2_ppm_ave")) +
   geom_point(size = 3, alpha = .5, color = "blue")
 
-df_prediction_2 <- predict
+#df_prediction_2 <- predict
 
 fig <- plot_ly(df_prediction, x = ~dist, y = ~ele_fit, size = 1)
 fig
 
 ```
 
-#fix some things here
+#reverse order
+unfortunatly gavi is going from downstream to up, and we want upstream to down. so reverse this order
+you can't just reverse order the distance column because they are not collected at even intervals.
 
+#loops below switch order of distance
 
+```{r reverse, echo=FALSE}
 
-```{r calc slope, echo=FALSE}
 
 df_prediction <- df_prediction[order(df_prediction$dist),]
+df_prediction$dist_diff <- NA
+df_prediction$Total_flux <- NA
 
-df_prediction$slope <- NA
 for(i in 1:nrow(df_prediction)) {       # for-loop over rows
-  df_prediction$dist_down[i] <- df_prediction$dist[i+1]
-  df_prediction$ele_down[i] <- df_prediction$ele_fit[i+1]
+  if (i == 1) {
+    df_prediction$dist_diff[i] <- 0
+  } else {
+    df_prediction[i,"dist_diff"] <-   df_prediction[i,"dist"] - df_prediction[i-1,"dist"]
+  }
 }
 
-df_prediction$slope <- (df_prediction$ele_fit - df_prediction$ele_down)/(df_prediction$dist - df_prediction$dist_down)
-df_prediction$dist_down <- NULL
-df_prediction$ele_down <- NULL
-
-df_predictionblah <- df_prediction%>%filter(slope<0)
-
-
-###
-df_prediction <- df_prediction[order(df_prediction$dist),]
-df_prediction$slope <- NA
-loop <- df_prediction%>%drop_na(ele_fit)
-for(i in 1:nrow(loop)) {       # for-loop over rows
-  x = loop$dist[i] - 5
-  loop$ele_minus[i] <- loop[which.min(abs(loop$dist-x)),]$ele_fit
-  loop$dist_minus[i] <- loop[which.min(abs(loop$dist-x)),]$dist
-  
-  y = loop$dist[i] + 5
-  loop$ele_plus[i] <- loop[which.min(abs(loop$dist-y)),]$ele_fit
-  loop$dist_plus[i] <- loop[which.min(abs(loop$dist-y)),]$dist
-  
-  loop$slope <- (loop$ele_minus-loop$ele_plus)/(loop$dist_minus-loop$dist_plus)
-  
+df_prediction <- df_prediction[order(-df_prediction$dist),]
+df_prediction$dist_new <- NA
+for(i in 1:nrow(df_prediction)) {       # for-loop over rows
+  if (i == 1) {
+    df_prediction$dist_new[i] <- 0
+  } else {
+    df_prediction[i,"dist_new"] <-   df_prediction[i,"dist_diff"] + df_prediction[i-1,"dist_new"]
+  }
 }
-loop$dist_minus <- NULL
-loop$dist_plus <- NULL
-loop$ele_minus <- NULL
-loop$ele_plus <- NULL
 
-df_prediction <- loop 
+df_prediction <- df_prediction%>%filter(dist_new<350|dist_new>507.38)
+df_prediction$X <-NULL
+df_prediction$dist <- NULL
+names(df_prediction)[names(df_prediction)=="dist_new"] <- "dist"
 
 ```
 
-```{r ante calc slope, echo=FALSE}
+#calcualte slope
+here we calculate slope from the sample point and upstream 50m
 
+```{r calc slope, echo=FALSE}
+
+###
 df_prediction <- df_prediction[order(df_prediction$dist),]
-df_prediction$ante_slope <- NA
+df_prediction$slope50m <- NA
 loop <- df_prediction%>%drop_na(ele_fit)
 for(i in 1:nrow(loop)) {       # for-loop over rows
-  x = loop$dist[i] - 0
+  x = loop$dist[i] - 50
   loop$ele_minus[i] <- loop[which.min(abs(loop$dist-x)),]$ele_fit
   loop$dist_minus[i] <- loop[which.min(abs(loop$dist-x)),]$dist
   
-  y = loop$dist[i] + 10
+  y = loop$dist[i] + 3
   loop$ele_plus[i] <- loop[which.min(abs(loop$dist-y)),]$ele_fit
   loop$dist_plus[i] <- loop[which.min(abs(loop$dist-y)),]$dist
   
-  loop$ante_slope <- (loop$ele_minus-loop$ele_plus)/(loop$dist_minus-loop$dist_plus)
+  loop$slope50m <- (loop$ele_minus-loop$ele_plus)/(loop$dist_minus-loop$dist_plus)
   
 }
 loop$dist_minus <- NULL
@@ -673,10 +668,12 @@ df_prediction <- loop
 ```{r write, echo=FALSE}
 fig <- plot_ly(df_prediction, x = ~dist, y = ~ele_fit, size = 1)
 fig
+fig <- plot_ly(df_prediction, x = ~dist, y = ~slope50m, size = 1)
+fig
 ```
 
 ```{r write, echo=FALSE}
 
-write.csv(df_prediction, here::here("ProcessedData/GAVI_synoptic_2022-02-18.csv"))
+write.csv(df_prediction, here::here("ProcessedData/GAVI_synoptic_2022-03-24.csv"))
 ```
 
