--- a/KriddieFolder/COLM_moreGeomorph_2022-03-24.Rmd
+++ b/KriddieFolder/COLM_moreGeomorph_2022-03-24.Rmd
@@ -61,8 +61,17 @@ arrange.vars <- function(data, vars){
 ```
 
 ```{r read in data}
-df_prediction <- read.csv(here::here("ProcessedData/GAVI_synoptic_2022-03-24.csv"))
+df_prediction <- read.csv(here::here("ProcessedData/COLMILLO_synoptic_2022-03-24.csv"))
 df_prediction$X <- NULL
+df_prediction$lat <- NULL
+df_prediction$lon_dist <- NULL
+df_prediction$lat_dist <- NULL
+df_prediction$lon <- NULL
+df_prediction$ele <- NULL
+df_prediction$time <- NULL
+
+df_prediction <- unique(df_prediction)
+df_prediction <- df_prediction%>%filter(dist_diff>0)
 
 ggplot(data=df_prediction, aes(dist, ele_fit, color=log10(CO2_ppm_ave)),size=5) +
   geom_point(size=5)
@@ -73,7 +82,7 @@ ggplot(data=df_prediction, aes(lon_fit, lat_fit, color=log10(CO2_ppm_ave)),size=
 #read in x, w, d data frame
 
 ```{r x and w and d, echo=FALSE}
-XWD <- read.csv(here::here("/Geomorphology/Gavilan/GAVImainstem_Geomorph_2022-01-28.csv"))
+XWD <- read.csv(here::here("/Geomorphology/Colmillo/COLM_geomorph_2022-01-28.csv"))
 
 XWD <- XWD[,c("lon","lat","x","d","w","ele","notes")]
 
@@ -83,54 +92,22 @@ XWD <- XWD[,c("lon","lat","x","d","w","ele","notes")]
 XWD <- XWD[order(XWD$x),]
 XWD$x_diff <- NA
 
-##first above GAVI
-XWD_up <- XWD%>%filter(x>570)
-for(i in 1:nrow(XWD_up)) {       # for-loop over rows
+for(i in 1:nrow(XWD)) {       # for-loop over rows
   if (i == 1) {
-    XWD_up$x_diff[i] <- 0
+    XWD$x_diff[i] <- 0
   } else {
-    XWD_up[i,"x_diff"] <-   XWD_up[i,"x"] - XWD_up[i-1,"x"]
+    XWD[i,"x_diff"] <-   XWD[i,"x"] - XWD[i-1,"x"]
   }
 }
-XWD_up <- XWD_up[order(-XWD_up$x),]
-XWD_up$x_new <- NA
-for(i in 1:nrow(XWD_up)) {       # for-loop over rows
+XWD <- XWD[order(-XWD$x),]
+XWD$x_new <- NA
+for(i in 1:nrow(XWD)) {       # for-loop over rows
   if (i == 1) {
-    XWD_up$x_new[i] <- 0
+    XWD$x_new[i] <- 0
   } else {
-    XWD_up[i,"x_new"] <-   XWD_up[i-1,"x_diff"] + XWD_up[i-1,"x_new"]
+    XWD[i,"x_new"] <-   XWD[i-1,"x_diff"] + XWD[i-1,"x_new"]
   }
 }
-XWD_up$x_new <-XWD_up$x_new - 0.8
-XWD_up$x_new[which(XWD_up$x_new==-0.8)] <- 0
-
-##below GAVI
-XWD_down <- XWD%>%filter(x<570)
-for(i in 1:nrow(XWD_down)) {       # for-loop over rows
-  if (i == 1) {
-    XWD_down$x_diff[i] <- 0
-  } else {
-    XWD_down[i,"x_diff"] <-   XWD_down[i,"x"] - XWD_down[i-1,"x"]
-  }
-}
-XWD_down <- XWD_down[order(-XWD_down$x),]
-XWD_down$x_new <- NA
-for(i in 1:nrow(XWD_down)) {       # for-loop over rows
-  if (i == 1) {
-    XWD_down$x_new[i] <- 0
-  } else {
-    XWD_down[i,"x_new"] <-   XWD_down[i-1,"x_diff"] + XWD_down[i-1,"x_new"]
-  }
-}
-
-#now add on some distance to account for Gavi_up and the wetland in between
-
-#wetland is dist: 313.0514 to 507.6456
-#most downstream measurment of gavi_up is 245.0
-
-XWD_down$x_new <- XWD_down$x_new + (507.6456-313.0514+0.4058) + 245.0
-
-XWD <- rbind(XWD_up,XWD_down)
 
 #great. now get rid of the stuff you don't want
 XWD <- XWD[,c("lon","lat","x_new","d","w","ele","notes")]
@@ -146,8 +123,8 @@ df_prediction <- arrange.vars(df_prediction, c("lon_fit"=1))
 #seeing some problems around GAVI wetland. Distance don't match up. So we will restart distance 
 
 XWD_1 <- XWD %>%drop_na(lon)
-XWD_2 <- XWD
-XWD_2$x[which(XWD_2$x>1043)] <- XWD_2$x[which(XWD_2$x>1043)] - (1045 - 507.6455874)
+#XWD_2 <- XWD
+#XWD_2$x[which(XWD_2$x>1043)] <- XWD_2$x[which(XWD_2$x>1043)] - (1045 - 507.6455874)
 
 x <- SpatialPoints(XWD_1[,c(1:2)])
 y <- SpatialPoints(df_prediction[,c(1:2)]) 
@@ -257,28 +234,6 @@ for(i in 1:nrow(df)) {       # for-loop over rows
   }
 }
 
-##something a little complicated about GAVi is that there isa wetland where we didn't take measurments from  ______,so that should not be included in the area
-    # I think I'll just hard program that in if I can
-
-#where does gaviup empty into the wetland? who knows. lets just add 3 meters 343.420370
-#df$midpoint[which(df$x_pred==245.0)] <- (507.645587 + 3)
-df$x_pred <- as.numeric(df$x_pred)
-df$x_pred <- round(df$x_pred, digits = 1)
-
-df$length[which(df$x_pred==245.0)] <- 179.195152 + 3 - df$midpoint[which(df$x_pred==245)]
-df$area[which(df$x_pred==245.0)] <- df$w[which(df$x_pred==245.0)]/100 * df$length[which(df$x_pred==245.0)]
-
-#according to collected geomorph data, wetland outlet is 5m upstream of stn1 @ 445, distance =507.645587
-df$midpoint[which(df$x_pred==445.0)] <- 507.645587 - 5 
-df$length[which(df$x_pred==445.0)] <- 510.025371 - df$midpoint[which(df$x_pred==445.0)]
-df$area[which(df$x_pred==445.0)] <- df$w[which(df$x_pred==445.0)]/100 * df$length[which(df$x_pred==445.0)]
-
-
-
-#df$length[which(df$x_pred==100)] <- 109.969768 - 	105.009944
-#df$area[which(df$x_pred==100)] <- df$w[which(df$x_pred==100)]/100 * df$length[which(df$x_pred==100)]
-
-
 df_prediction_3 <- df
 
 ```
@@ -341,8 +296,6 @@ for(i in 1:nrow(synop)) {       # for-loop over rows
 
 df_prediction_4 <- left_join(df_prediction,synop[,c("lon_fit","lat_fit","dist","Flux_ave","midpoint","surface_area","flux_umolpers","Totalflux_umolpers")], by=c("lon_fit","lat_fit","dist","Flux_ave"))
 
-df_prediction_4 <- df_prediction_4[c(1:2,9:28)]
-
 
 
 ```
@@ -357,6 +310,6 @@ I now have some cra
 ggplot(data=df_prediction_4, aes(dist, Totalflux_umolpers),size=5) +
   geom_point(size=5)
 
-write.csv(df_prediction_4, here::here("ProcessedData/GAVI_synopticGeom_2022-03-24.csv"))
+write.csv(df_prediction_4, here::here("ProcessedData/COLM_synopticGeom_2022-03-24.csv"))
 
 ```
