--- a/KriddieFolder/synop_fig1_2022-03-24.Rmd
+++ b/KriddieFolder/synop_fig1_2022-03-24.Rmd
@@ -30,9 +30,26 @@ We start with the most recently processes synoptic data. It includes calculates 
 df <- read.csv(here::here("ProcessedData/ALL_synoptic_2022-03-24.csv"))
 df$X <- NULL
 df <- unique(df)
-
+df$EOS_no[df$EOS_no == "EOS1"] <- "EOS_1"
+df$EOS_no[df$EOS_no == "EOS2"] <- "EOS_2"
+df$Date <- format(as.POSIXct(df$Date,format='%Y-%m-%d'))
+df$Totalflux_umolpers
+df$Flux_ave <- signif(df$Flux_ave, digits = 3)
 ##add raster data
 Synop_all_raster3 <- read.csv(here::here("Synoptic/Synop_all_raster3.csv"))
+
+Synop_all_raster3 <- Synop_all_raster3[,c("Wetland","Date","EOS_no","Flux_ave","Wetland_1","Elevation","lon","lat","FlowAccu","Flowlen","Slope")]
+colnames(Synop_all_raster3) <- c("Wetland_tribs","Date","EOS_no","Flux_ave","Wetland","Elevation_raster","lon_raster","lat_raster","FlowAccu","Flowlen","Slope_raster")
+Synop_all_raster3$Date <- format(as.POSIXct(Synop_all_raster3$Date,format='%m/%d/%Y %H:%M:%S'),format='%Y-%m-%d')
+Synop_all_raster3$EOS_no[Synop_all_raster3$EOS_no == "EOS1"] <- "EOS_1"
+Synop_all_raster3$EOS_no[Synop_all_raster3$EOS_no == "EOS2"] <- "EOS_2"
+Synop_all_raster3$Flux_ave <- signif(Synop_all_raster3$Flux_ave, digits = 3)
+
+
+df_2 <- full_join(df,Synop_all_raster3, by =  c("Date","EOS_no","Flux_ave","Wetland"))
+check <- df_2[,c("Date","EOS_no","Flux_ave","FlowAccu","Totalflux_umolpers","Wetland_tribs","Wetland")]%>%drop_na(Date)%>%filter(Wetland=="GAVI")
+check$Wetland_tribs[is.na(check$Wetland_tribs)]<-"GAVI-mainstem"
+check <- check%>%filter(Wetland_tribs=="GAVI-mainstem")
 ```
 
 ## Plot data
